@@ -149,7 +149,13 @@ class GTKUserInterface(apport.ui.UserInterface):
         return t
 
     def setup_bug_report(self):
-        # This is a bug generated through `apport-bug $package`.
+        # This is a bug generated through `apport-bug $package`, or
+        # `apport-collect $id`.
+
+        # avoid collecting information again, in this mode we already have it 
+        if 'Uname' in self.report:
+            self.collect_called = True
+            self.ui_update_view()
         self.w('title_label').set_label('<big><b>%s</b></big>' %
             _('Send problem report to the developers?'))
         self.w('title_label').show()
